  would activate the escape AI this is usually accompanied with 
  route_escape_randomWalk.

New commands:
- cart release: remove cart status
- falcon [release]: Display or remove falcon status
- pecopeco [release]: Display or remove pecopeco status
- ai manual: Pause automated botting and allow manual control
- ai auto: Same as 'ai on'
- guild ally <playerID | name> : ally with another guild

Internal:
- Implemented the beginning of a localization framework.
- Actor::get($ID) now returns $players{$ID} instead of $monsters{$ID}
  when both exist (which shouldn't happen, but this is a workaround for
  players being incorrectly detected as monsters).
- packet_outMangle/$switch hook is now called before openkore's built-in
  mangling, to give plugins more freedom.
- packet_attack hook now has extra 'type' argument.
- 'player' plugin hook, when called by 'Player Exists', is now called
  after all $player->{...} have been set to give more accurate information.
- all receive packets have been moved to Receive.pm now.
- $item->{ID} is now stored.
- New modes for $AI: 0 = off, 1 = manual, 2 = auto.
- partySkill now operates on an Actor::Player object always. This should
  fix the problem when a party member is on your screen, but never moved
  before and thus has no coordinates in $char->{party}{users}{$ID} and
  causes location-based partySkills to cast on (0,0).
- additional conStates 1.2 and 1.3 for servers who need to receive proper
  gameguard authentication first before allowing the client to continue
  its login sequence
- Removed %skills_lut, %skills_rlut, %skillsID_lut and %skillsID_rlut
  Use Skills->new() instead.
- Renamed subs:
  Receive.pm: guild_name_request => guild_member_online_status
  Receive.pm: guild_logon => character_name
  Send.pm: sendGuildMemberNameRequest => sendGetCharacterName
- guildID and guildEmblem unpacking format changed from "V" to "a4"
- %itemsPickup renamed to %pickupitems

Credits: